Stats: Swapping Posts & pages component (#69545)
* Adding empty state, title url and background colour

* Adding new feature flag

* Add new Post and Pages component

* Adding loading state and updating empty message logic

* Missing linting fix

* Adding action link

* Fixing actions alignment and adding more action elements

* Code cleanup

* Apply suggestions from code review

Co-authored-by: Jason Moon <4044428+jsnmoon@users.noreply.github.com>

* Removed unnecessary props and code cleanup

* More code cleanup

Co-authored-by: Jason Moon <jason.moon@automattic.com>
Co-authored-by: Jason Moon <4044428+jsnmoon@users.noreply.github.com>

--- a/packages/components/src/horizontal-bar-list/style.scss
+++ b/packages/components/src/horizontal-bar-list/style.scss
@@ -37,7 +37,7 @@
 			}
 
 			.horizontal-bar-list--hover-action {
-				visibility: visible;
+				display: block;
 			}
 		}
 	}
@@ -47,8 +47,9 @@
 		position: relative;
 		display: flex;
 		height: auto;
-		width: calc(100% - $value-column-width);
+		width: calc(100% - $value-column-width - $bar-left-spacing);
 		align-items: center;
+		flex: 1 0 auto;
 
 		&::before {
 			width: var(--horizontal-bar-list-fill);
@@ -64,7 +65,9 @@
 	}
 
 	.horizontal-bar-list--hover-action {
-		visibility: hidden;
+		display: none;
+		position: relative;
+		z-index: 1;
 	}
 
 	.label {
@@ -77,7 +80,7 @@
 	}
 
 	.value {
-		flex: 0 1 $value-column-width;
+		flex: 0 0 $value-column-width;
 		text-align: right;
 		align-self: center;
 	}
