Stats: Update Store main chart styling (#69661)
* Adjust tooltip styles in Store page

* Update Store tabs label and icon

* Adjust main chart structure with period header

* Adjust chart structure and styles

* Adjust chart tabs icon and styles

* Move .store-stats-orders-chart adjustment

* Apply black to text in tabs content

* Wrap period header styles to a component

* Adjust StatsTab label styles

* Show the tab `Net Sales` on Store page

* Refactor StatsPeriodHeader to function component

* Extract new tooltip styles to share between pages

* Fix styles and gate Delta with feature flag

* Move modernized-tooltip-styles importing

* Move the feature gate to reduce the importing work

* Empty-Commit

--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -1,3 +1,5 @@
+@import "client/my-sites/stats/modernized-tooltip-styles.scss";
+
 // Module container
 @include breakpoint-deprecated( ">960px" ) {
 	.stats__module-column {
@@ -214,150 +216,6 @@
 	.followers-count .button {
 		@include breakpoint-deprecated( "<480px" ) {
 			display: none;
-		}
-	}
-
-	.tooltip.popover.chart__tooltip {
-		// Overwrite Tooltip styles
-		&.is-bottom-right,
-		&.is-bottom-left,
-		&.is-bottom {
-			.popover__arrow {
-				border-bottom-color: var(--color-neutral-100);
-			}
-		}
-
-		&.is-top,
-		&.is-top-left,
-		&.is-top-right {
-			.popover__arrow {
-				border-top-color: var(--color-neutral-100);
-			}
-		}
-
-		&.is-left {
-			.popover__arrow {
-				border-left-color: var(--color-neutral-100);
-			}
-		}
-
-		&.is-right {
-			.popover__arrow {
-				border-right-color: var(--color-neutral-100);
-			}
-		}
-
-		// Overwrite Tooltip styles
-		.popover__inner {
-			color: var(--color-text-inverted);
-			background: var(--color-neutral-100);
-			font-size: $font-body-small;
-			padding: 16px 24px;
-
-			// Overwrite Chart styles
-			ul {
-				li {
-					font-size: $font-body-small;
-					font-weight: 500;
-					line-height: 20px;
-					letter-spacing: -0.24px;
-					margin-bottom: 10px;
-					text-transform: none;
-
-					&:last-child {
-						margin-bottom: 0;
-					}
-
-					.value {
-						color: inherit;
-					}
-
-					.gridicon {
-						margin-right: 12px;
-					}
-				}
-			}
-		}
-
-		// Overwrite Chart styles
-		.module-content-list-item {
-			&.is-date-label {
-				font-weight: 600;
-				border-bottom: 0;
-			}
-
-			&.is-published {
-				margin-bottom: 4px;
-			}
-
-			&.is-published-item {
-				height: auto;
-				font-size: $font-body-extra-small;
-				margin-bottom: 0;
-				padding-left: 30px;
-				text-decoration: underline;
-
-				.label {
-					height: auto;
-					line-height: 20px;
-					color: inherit;
-					letter-spacing: inherit;
-					word-break: break-word;
-				}
-			}
-		}
-	}
-}
-
-.stats--new-main-chart {
-	// Traffic chart period header
-	.stats__period-header {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		background-color: var(--studio-white);
-		padding: 16px 0;
-		margin-top: 48px;
-
-		.stats-period-navigation {
-			flex: 1;
-		}
-
-		.segmented-control {
-			margin-left: 24px;
-
-			&.is-primary {
-				.segmented-control__item.is-selected {
-					.segmented-control__link {
-						border-color: var(--color-primary);
-						background-color: var(--color-primary);
-
-						&:hover {
-							background-color: var(--color-primary);
-						}
-					}
-				}
-			}
-
-			.segmented-control__item {
-				&:first-of-type .segmented-control__link {
-					border-top-left-radius: 4px;
-					border-bottom-left-radius: 4px;
-				}
-
-				&:last-of-type .segmented-control__link {
-					border-top-right-radius: 4px;
-					border-bottom-right-radius: 4px;
-				}
-			}
-		}
-
-		.segmented-control__link {
-			font-weight: 500;
-			line-height: 20px;
-			color: var(--studio-black);
-			width: 100px;
-			box-sizing: border-box;
 		}
 	}
 }
