--- a/client/my-sites/store/style.scss
+++ b/client/my-sites/store/style.scss
@@ -1,3 +1,5 @@
+@import "client/my-sites/stats/modernized-tooltip-styles.scss";
+
 .woocommerce {
 	@import "app/dashboard/style";
 	@import "app/store-stats/store-stats-chart/style";
