Apply new main chart structure and styles to Ads

--- a/client/my-sites/stats/wordads/style.scss
+++ b/client/my-sites/stats/wordads/style.scss
@@ -1,3 +1,5 @@
+@import "client/my-sites/stats/modernized-chart-tabs-styles.scss";
+
 @include breakpoint-deprecated( ">480px" ) {
 	.wordads .stats-tabs .stats-tab {
 		width: 33.33%;
