--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -1,4 +1,5 @@
 @import "client/my-sites/stats/modernized-tooltip-styles.scss";
+@import "client/my-sites/stats/modernized-chart-tabs-styles.scss";
 
 // Module container
 @include breakpoint-deprecated( ">960px" ) {
