--- a/client/my-sites/store/app/store-stats/store-stats-chart/style.scss
+++ b/client/my-sites/store/app/store-stats/store-stats-chart/style.scss
@@ -1,3 +1,5 @@
+@import "client/my-sites/stats/modernized-chart-tabs-styles.scss";
+
 .store-stats-chart__top {
 	display: flex;
 	flex-direction: row;
@@ -7,205 +9,5 @@
 	.store-stats-chart__title {
 		height: 10px;
 		padding: 12px 19px 10px 20px;
-	}
-}
-
-// For feature `stats/new-main-chart`
-.store-stats-orders-chart.chart-tabs--new-main-chart {
-	background-color: var(--color-surface);
-
-	// Legend options
-	.store-stats-chart__top {
-		display: flex;
-		justify-content: end;
-		background-color: var(--color-surface);
-		padding-bottom: 16px;
-
-		.chart__legend {
-			margin: 0;
-		}
-
-		.store-stats-chart__title {
-			display: none;
-		}
-
-		.chart__legend-options {
-			text-transform: none;
-		}
-
-		.chart__legend-option {
-			&:not(:first-child) {
-				margin-left: 24px;
-			}
-		}
-
-		.chart__legend-label {
-			color: var(--studio-black);
-			font-size: $font-body-small;
-			font-weight: 400;
-			line-height: 18px;
-			padding: 0;
-
-			.chart__legend-checkbox {
-				width: 20px;
-				height: 20px;
-				background-color: var(--color-surface);
-				border: 1px solid var(--color-neutral-10);
-				border-radius: 2px;
-				margin-right: 8px;
-
-				&:checked::before {
-					margin: 3px auto;
-				}
-			}
-		}
-
-		.chart__legend-color {
-			width: 20px;
-			height: 20px;
-			margin: 0 8px 0 0;
-			border-radius: 4px;
-		}
-	}
-
-	// Main Chart
-	.chart {
-		padding: 0;
-
-		.chart__bar {
-			// Cancel the chart bar styles
-			&.is-weekend {
-				background: none;
-			}
-
-			&:hover {
-				background-color: rgba(var(--color-neutral-rgb), 0.1);
-
-				.chart__bar-section.is-bar {
-					background-color: var(--color-primary);
-				}
-			}
-
-			&.is-selected {
-				background-color: rgba(var(--color-primary-rgb), 0.1);
-
-				.chart__bar-section.is-bar {
-					background-color: var(--color-primary);
-				}
-
-				.chart__bar-section-inner {
-					background-color: var(--color-primary-dark);
-				}
-			}
-		}
-
-		.chart__bar-section {
-			background-color: var(--color-primary);
-			border-top-left-radius: 2px;
-			border-top-right-radius: 2px;
-		}
-
-		.chart__x-axis-label:not(.chart__x-axis-width-spacer) {
-			font-weight: 400;
-			line-height: 24px;
-			color: var(--color-neutral-40);
-		}
-	}
-
-	// Chart Tabs
-	.stats-tabs {
-		width: 100%;
-		display: flex;
-		flex-wrap: nowrap;
-		align-items: center;
-		padding: 24px 0 16px;
-		margin-bottom: 32px;
-		border: 0;
-
-		&.is-enabled {
-			background-color: var(--color-surface);
-		}
-
-		.stats-tab {
-			flex: 1;
-			width: auto;
-			border: 0;
-
-			&:not(:first-child) {
-				margin-left: 16px;
-			}
-
-			a {
-				display: block;
-				background-color: var(--color-neutral-0);
-				border: 1.5px solid transparent;
-				border-radius: 4px;
-				overflow: hidden;
-				color: var(--color-neutral-60);
-
-				&:hover {
-					background-color: var(--color-neutral-0);
-				}
-
-				.label {
-					font-size: $font-body-small;
-					line-height: 20px;
-					text-transform: none;
-					letter-spacing: -0.15px;
-				}
-
-				.value {
-					font-size: $font-title-small;
-					font-weight: 500;
-					line-height: 30px;
-				}
-
-				.store-stats-orders-chart__value.value {
-					display: block;
-				}
-
-				.delta {
-					justify-content: center;
-				}
-			}
-
-			&.is-low,
-			&.is-selected,
-			&.is-selected.is-low {
-				a {
-					&:hover {
-						color: var(--studio-black);
-
-						.label {
-							color: var(--studio-black);
-						}
-
-						.value {
-							color: var(--studio-black);
-						}
-					}
-
-					.value {
-						color: var(--studio-black);
-					}
-				}
-			}
-
-			&.is-selected {
-				a {
-					color: var(--studio-black);
-					border-color: var(--color-primary);
-					background-color: var(--color-surface);
-
-					.label {
-						color: var(--studio-black);
-					}
-
-					.value {
-						color: var(--studio-black);
-					}
-				}
-			}
-		}
 	}
 }
