Register signup import-focused flow

--- a/client/signup/signup-header/style.scss
+++ b/client/signup/signup-header/style.scss
@@ -20,7 +20,8 @@
 	}
 
 	.newsletter.progress-bar,
-	.link-in-bio.progress-bar {
+	.link-in-bio.progress-bar,
+	.import-focused.progress-bar {
 		position: absolute;
 		top: -8px;
 		background-color: #fff;
