Fix alignment of accent color dropdown color swatch & label

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/components/accent-color-control/style.scss
@@ -57,6 +57,7 @@
 		.select-dropdown__options .select-dropdown__item-text > svg {
 			vertical-align: middle;
 			margin-right: 8px;
+			margin-bottom: 3px;
 		}
 
 		.select-dropdown__item.is-selected {
