--- a/packages/components/src/highlight-cards/style.scss
+++ b/packages/components/src/highlight-cards/style.scss
@@ -24,12 +24,17 @@ $vertical-margin: 32px;
 .highlight-cards-list {
 	display: flex;
 	flex-flow: row nowrap;
+	max-width: 100%;
+	overflow-x: scroll;
+	padding: 1px; // Ensures scrollable content box doesn't cover the highlight card.
 
 	.highlight-card {
 		border-color: var(--studio-gray-5);
-		border-radius: 4px;
+		border-radius: 5px; // stylelint-disable-line scales/radii
 		width: 100%;
 		min-width: 200px; // Minimum mobile width
+		padding: 16px 24px;
+		margin-bottom: 0;
 
 		margin-right: 24px;
 		&:last-child {
@@ -38,10 +43,15 @@ $vertical-margin: 32px;
 	}
 }
 
+.highlight-card-icon {
+	margin-bottom: 24px;
+}
+
 .highlight-card-heading {
 	font-weight: 500;
 	line-height: 20px;
 	font-family: $header-font;
+	margin-bottom: 4px;
 }
 
 .highlight-card-count {
