--- a/packages/components/src/horizontal-bar-list/_stats-variables.scss
+++ b/packages/components/src/horizontal-bar-list/_stats-variables.scss
@@ -5,7 +5,7 @@ $row-font-size: 14px;
 $row-line-height: 20px;
 $bar-left-spacing: 10px;
 $value-column-width: 50px;
-$border-radius: 4px;
+$border-radius: 5px; // stylelint-disable-line scales/radii
 $item-transition: 0.1s ease-out;
 $item-indicator-width: 4px;
 $font-color: var(--studio-gray-100);
