Rename signup flow from import-focused to import

--- a/client/signup/signup-header/style.scss
+++ b/client/signup/signup-header/style.scss
@@ -21,7 +21,7 @@
 
 	.newsletter.progress-bar,
 	.link-in-bio.progress-bar,
-	.import-focused.progress-bar {
+	.import.progress-bar {
 		position: absolute;
 		top: -8px;
 		background-color: #fff;
