Fix the signup header z-index & the getSite selector

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/processing-step/tailored-flow-precheckout-screen/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/processing-step/tailored-flow-precheckout-screen/style.scss
@@ -2,11 +2,14 @@
 @import "@wordpress/base-styles/breakpoints";
 
 .is-section-stepper {
+	.processing {
+		.signup-header {
+			z-index: 1;
+		}
+	}
 	.newsletter,
 	.link-in-bio {
 		.signup-header {
-			z-index: 1;
-
 			.signup-header__right {
 				visibility: hidden;
 			}
