--- a/packages/components/src/horizontal-bar-list/_stats-variables.scss
+++ b/packages/components/src/horizontal-bar-list/_stats-variables.scss
@@ -9,6 +9,7 @@ $border-radius: 5px; // stylelint-disable-line scales/radii
 $item-transition: 0.1s ease-out;
 $item-indicator-width: 4px;
 $font-color: var(--studio-gray-100);
+$card-vertical-space: 32px;
 
 $header-spacer: 12px;
 $header-font-size: 20px;
