--- a/packages/components/src/horizontal-bar-list/stats-card.scss
+++ b/packages/components/src/horizontal-bar-list/stats-card.scss
@@ -14,6 +14,10 @@
 	color: $font-color;
 	background-color: var(--studio-white);
 
+	& + & {
+		margin-top: $card-vertical-space;
+	}
+
 	.stats-card--header {
 		display: flex;
 		justify-content: space-between;
