--- a/packages/components/src/horizontal-bar-list/stats-card.scss
+++ b/packages/components/src/horizontal-bar-list/stats-card.scss
@@ -14,8 +14,13 @@
 	color: $font-color;
 	background-color: var(--studio-white);
 
-	& + & {
+	& + &,
+	& + div { // until every module is swapped
 		margin-top: $card-vertical-space;
+	}
+
+	.stats-card--hero {
+		padding-bottom: $card-vertical-space;
 	}
 
 	.stats-card--header {
