Apply new header styles with FixedNavigationHeader

--- a/client/my-sites/stats/style.scss
+++ b/client/my-sites/stats/style.scss
@@ -1,5 +1,6 @@
 @import "client/my-sites/stats/modernized-tooltip-styles.scss";
 @import "client/my-sites/stats/modernized-chart-tabs-styles.scss";
+@import "client/my-sites/stats/modernized-page-header-styles.scss";
 
 // Module container
 @include breakpoint-deprecated( ">960px" ) {
