Apply page header styles to the Store page

--- a/client/my-sites/store/style.scss
+++ b/client/my-sites/store/style.scss
@@ -1,4 +1,5 @@
 @import "client/my-sites/stats/modernized-tooltip-styles.scss";
+@import "client/my-sites/stats/modernized-page-header-styles.scss";
 
 .woocommerce {
 	@import "app/dashboard/style";
