Stats: Swapping Search and Countries components (#69841)
* Extending card component with a hero element

* Adding country flags and swapping search module

* Cleanup

* Fixing spacing

* Fixing a bug for unsorted values

* Improving max value selection

Co-authored-by: Jason Moon <4044428+jsnmoon@users.noreply.github.com>

* Linting and TS fixes

* test

* Revert "test"

This reverts commit 739059062ed171e6720ce5437e37c272da30a650.

Co-authored-by: Jason Moon <4044428+jsnmoon@users.noreply.github.com>

--- a/packages/components/src/horizontal-bar-list/stats-card.scss
+++ b/packages/components/src/horizontal-bar-list/stats-card.scss
@@ -14,6 +14,15 @@
 	color: $font-color;
 	background-color: var(--studio-white);
 
+	& + &,
+	& + div { // until every module is swapped
+		margin-top: $card-vertical-space;
+	}
+
+	.stats-card--hero {
+		padding-bottom: $card-vertical-space;
+	}
+
 	.stats-card--header {
 		display: flex;
 		justify-content: space-between;
