--- a/packages/components/src/promo-card/style.scss
+++ b/packages/components/src/promo-card/style.scss
@@ -1,8 +1,8 @@
 @import "../styles/typography";
 
 .promo-card {
-	background: #fff;
-	border: 1px solid #dcdcde;
+	background: var(--studio-white);
+	border: 1px solid var(--studio-gray-5);
 	border-radius: 5px; // stylelint-disable-line scales/radii
 
 	// margin: 20px;
@@ -52,8 +52,7 @@
 	line-height: 40px;
 	letter-spacing: -0.32px;
 
-	/* Gray / Gray 100 */
-	color: #101517;
+	color: var(--studio-gray-100);
 }
 
 .promo-card__message {
@@ -68,8 +67,7 @@
 	line-height: 25px;
 	letter-spacing: -0.24px;
 
-	/* Gray / Gray 100 */
-	color: #101517;
+	color: var(--studio-gray-100);
 
 	@media ( max-width: 625px ) {
 		margin-bottom: 20px;
