Restore static Traffic page header

--- a/client/my-sites/stats/stats-period-header/style.scss
+++ b/client/my-sites/stats/stats-period-header/style.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: space-between;
 	background-color: var(--color-surface);
-	padding: 16px 0;
+	margin: 48px 0 16px;
 
 	.stats-period-navigation {
 		flex: 1;
