--- a/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/intro/styles.scss
@@ -77,6 +77,31 @@
 		}
 	}
 
+	&.videopress {
+		padding: 0;
+		color: #fff;
+
+		.signup-header {
+			h1 {
+				color: #fff;
+			}
+
+			svg {
+				fill: #fff;
+				stroke: none;
+			}
+		}
+
+		.button.is-primary {
+			background-color: #ffe61c;
+			color: #000;
+		}
+
+		.flow-progress {
+			background: #0003;
+		}
+	}
+
 	min-height: 100%;
 	min-width: 100%;
 	width: 100%;
@@ -121,6 +146,11 @@
 				margin: 5px 0 60px;
 			}
 		}
+		.step-container__videopress-powered {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+		}
 	}
 
 	.intro__content {
@@ -157,6 +187,7 @@
 
 		@include onboarding-break-mobile-landscape {
 			font-size: $font-title-medium;
+			line-height: inherit;
 		}
 
 		span {
@@ -171,6 +202,21 @@
 
 	.intro__title + .intro__button {
 		margin-top: 32px;
+	}
+
+	.intro__video {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		border: 0;
+
+		&.loading-frame {
+			background-image: url(calypso/assets/images/onboarding/videopress-onboarding-video-poster.jpeg);
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
 	}
 
 	.intro__button {
