--- a/client/landing/stepper/declarative-flow/internals/steps-repository/processing-step/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/processing-step/style.scss
@@ -56,3 +56,25 @@ $progress-duration: 800ms;
 .anchor-fm.processing .step-container__content {
 	width: 100%;
 }
+
+.is-videopress-stepper.is-processing-step {
+	padding: 0;
+	color: #fff;
+
+	.processing-step__progress-bar {
+		background-color: #fff3;
+		border-radius: 4px;
+		&::before {
+			background-color: #ffe61c;
+		}
+	}
+
+	@include break-medium {
+		background-size: auto 50%, auto 50%;
+	}
+
+	@include break-large {
+		background-position-y: 50%, 100%;
+		background-position-x: 0, 100%;
+	}
+}
