AI Logo generator: Add initial components (#85670)
* add image loader and first load screen

* add classnames dependency

* add assets

* add logo presenter component

* update generator modal UI

* fix svg properties

* reset demo timeout when modal is closed

* refactor css files

* update test

--- a/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
@@ -1,18 +1,24 @@
 .jetpack-ai-logo-generator-modal {
 	.components-modal__header {
-		border-bottom: 1px solid var(--studio-gray-5);
+		border-bottom: 1px solid var(--studio-gray-5, #dcdcde);
 		padding: 20px 24px;
 	}
 
 	.components-modal__content {
 		padding: 32px;
-	}
 
-	&__body {
-		width: 100%;
-
-		@media (min-width: 699px) {
-			width: 699px;
+		> div:not(.components-modal__header) {
+			height: 100%;
 		}
+	}
+}
+
+.jetpack-ai-logo-generator-modal__body {
+	width: 100%;
+	height: 100%;
+
+	@media (min-width: 699px) {
+		width: 699px;
+		height: 409px;
 	}
 }
