AI Logo generator: Add history carousel linked to the store (#85808)
* fix lint issues

* update store with logo generation data and actions

* small adjustments

* add history-carousel component

* link logo presenter to store

* link logo presenter to store and update CSS

--- a/packages/jetpack-ai-calypso/src/logo-generator/components/logo-presenter.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/logo-presenter.scss
@@ -38,6 +38,8 @@
 }
 
 .jetpack-ai-logo-generator-modal-presenter__logo {
+	width: 198px;
+	height: 198px;
 	margin: 16px 30px 16px 16px;
 
 	@media (max-width: 699px) {
