--- a/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
@@ -6,16 +6,24 @@
 
 	.components-modal__content {
 		padding: 32px;
+	}
 
-		> div:not(.components-modal__header) {
-			height: 100%;
+	.components-button {
+		&:focus:not(:disabled) {
+			box-shadow: 0 0 0 2px #3858e9;
+		}
+
+		&.is-link {
+			text-decoration: none;
+			color: #3858e9;
 		}
 	}
 }
 
 .jetpack-ai-logo-generator-modal__body {
-	width: 100%;
-	height: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
 
 	@media (min-width: 700px) {
 		width: 700px;
@@ -30,13 +38,7 @@
 		display: flex;
 		gap: 4px;
 		align-items: center;
-		margin-top: 24px;
-		color: #3858e9;
-		text-decoration: none;
-
-		&:focus:not(:disabled) {
-			box-shadow: 0 0 0 2px #3858e9;
-		}
+		margin-top: 8px;
 
 		.icon {
 			color: var(--studio-gray-20);
