AI Logo Generator: Apply logo to site (#85868)
* add setSiteLogo lib function

* refactoring store

* rename useLogo hook

* add action to save selected logo

* integrate save function with UI and store

--- a/packages/jetpack-ai-calypso/src/logo-generator/components/logo-presenter.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/logo-presenter.scss
@@ -80,12 +80,10 @@
 	display: flex;
 	align-items: center;
 
-	&.clickable {
-		cursor: pointer;
-
-		.action-text {
-			color: #3858e9;
-		}
+	&.components-button,
+	&.components-button:hover,
+	&.components-button:active {
+		color: #3858e9;
 	}
 
 	.action-text {
