AI Logo Generator: UI adjustments (#85961)
* use translation functions on prompt

* use theme color

* make modal max height bigger

* fix ai icon spacing

* fix initial loader position

* reload the page after updating the logo

* fix mobile styles

* fix placeholder without translation function call

* add store entry for logo update status

* update UI to respond to logo actions

--- a/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
@@ -1,4 +1,8 @@
 .jetpack-ai-logo-generator-modal {
+	@media (min-width: 960px) {
+		max-height: 90%;
+	}
+
 	.components-modal__header {
 		border-bottom: 1px solid var(--studio-gray-5, #dcdcde);
 		padding: 20px 24px;
@@ -6,16 +10,20 @@
 
 	.components-modal__content {
 		padding: 32px;
+
+		> div:not(.components-modal__header) {
+			height: 100%;
+		}
 	}
 
 	.components-button {
-		&:focus:not(:disabled) {
-			box-shadow: 0 0 0 2px #3858e9;
+		&:focus:not(:disabled):not(.is-primary) {
+			box-shadow: 0 0 0 2px var(--color-link, #3858e9);
 		}
 
 		&.is-link {
 			text-decoration: none;
-			color: #3858e9;
+			color: var(--color-link, #3858e9);
 		}
 	}
 }
@@ -24,6 +32,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	height: 100%;
 
 	@media (min-width: 700px) {
 		width: 700px;
