--- a/packages/jetpack-ai-calypso/src/logo-generator/components/history-carousel.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/history-carousel.scss
@@ -22,7 +22,7 @@
 	flex-shrink: 0;
 
 	&.is-selected {
-		border-color: #3858e9;
+		border-color: var(--color-link, #3858e9);
 		border-width: 1.5px;
 	}
 
