--- a/packages/jetpack-ai-calypso/src/logo-generator/components/logo-presenter.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/logo-presenter.scss
@@ -10,7 +10,7 @@
 	flex-grow: 1;
 	max-height: 229px;
 
-	@media (max-width: 699px) {
+	@media (max-width: 700px) {
 		flex-direction: column;
 		max-height: unset;
 	}
@@ -42,7 +42,7 @@
 	height: 198px;
 	margin: 16px 30px 16px 16px;
 
-	@media (max-width: 699px) {
+	@media (max-width: 700px) {
 		margin: 16px;
 	}
 }
@@ -56,7 +56,7 @@
 	padding: 16px 0;
 	box-sizing: border-box;
 
-	@media (max-width: 699px) {
+	@media (max-width: 700px) {
 		margin-left: 32px;
 	}
 }
@@ -83,7 +83,7 @@
 	&.components-button,
 	&.components-button:hover,
 	&.components-button:active {
-		color: #3858e9;
+		color: var(--color-link, #3858e9);
 	}
 
 	.action-text {
