Jetpack Logo Generator: use contenteditable element instead of textarea (#86065)
* change textarea for a div[contentEditable], adapt styles and handlers

* UI fixes

* fix prompt enhancement

---------

Co-authored-by: Douglas <douglas.henri@automattic.com>

--- a/packages/jetpack-ai-calypso/src/logo-generator/components/prompt.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/prompt.scss
@@ -45,11 +45,27 @@
 		border: 0;
 		resize: none;
 		flex-grow: 1;
-		min-height: 60px; /* temporary while we figure out auto height */
+		padding: 6px 0;
+		vertical-align: baseline;
+		color: var(--studio-gray-100);
+		line-height: 1.6;
 
 		&:focus,
 		&:active {
 			outline: 0;
+		}
+
+		&[contentEditable="false"] {
+			color: var(--studio-gray-50, #646970);
+		}
+
+		&[placeholder]:empty::before {
+			content: attr(placeholder);
+			color: var(--studio-gray-50, #646970);
+		}
+
+		&[placeholder]:empty:focus::before {
+			content: "";
 		}
 	}
 }
