--- a/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
+++ b/packages/jetpack-ai-calypso/src/logo-generator/components/generator-modal.scss
@@ -9,7 +9,8 @@
 	}
 
 	.components-modal__content {
-		padding: 32px;
+		padding: 32px 32px 0 32px;
+		margin-bottom: 32px;
 
 		> div:not(.components-modal__header) {
 			height: 100%;
