Created a worning for not eligible trial users

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/plans/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/plans/style.scss
@@ -132,6 +132,12 @@
 			align-items: center;
 			position: relative;
 		}
+
+		.not-eligible-for-hosting-trial-notice {
+			max-width: 680px;
+			margin: auto;
+			margin-bottom: 60px;
+		}
 	}
 }
 
