Site Settings: Change the style of the Privacy settings help icon (#85903)
* Change the style of the Privacy settings help icon to match the style of the site icon setting popover icon

* Use popover to display privacy help

* Add period to popover text

* Remove period, should not be part of link

* Refactor privacy info popover link and dot

* remove space before the dot

---------

Co-authored-by: sejas <antonio@sejas.es>

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -590,6 +590,10 @@ button.site-settings__general-settings-set-guessed-timezone.button.is-borderless
 	pointer-events: none;
 }
 
+#site-privacy-settings .section-header__label-text button {
+	vertical-align: middle;
+}
+
 .site-settings__writing-settings {
 	.theme-enhancements__card {
 		.form-fieldset.minileven {
