Fix field labels and styling.

--- a/client/jetpack-cloud/sections/partner-portal/payment-method-form/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/payment-method-form/style.scss
@@ -22,3 +22,23 @@
 		padding: 0;
 	}
 }
+
+.payment-method-form__notice,
+.payment-method-form .credit-card-fields__input-field :is(label, .credit-card-fields__label-text) {
+	font-size: rem(14px);
+	line-height: 1.4;
+	font-weight: 500;
+}
+
+.payment-method-form__notice {
+	color: var(--studio-gray-50);
+	font-weight: 400;
+	margin-block-start: 24px;
+	display: flex;
+	gap: 8px;
+}
+
+.payment-method-form__notice-icon {
+	fill: var(--studio-gray-30);
+	flex-shrink: 0;
+}
