Jetpack Manage: Add breadcrumb in the new 'Add Payment method' page. (#86235)
* Add Breadcrumb as an official layout sub component.

* Use the new LayoutBreadcrumb component.

* Make 'Payment methods' breadcrumb a link.

* Fix incorrect link.

Co-authored-by: Yashwin Poojary <yashwinpoojary@gmail.com>

---------

Co-authored-by: Yashwin Poojary <yashwinpoojary@gmail.com>

--- a/client/jetpack-cloud/components/layout/style.scss
+++ b/client/jetpack-cloud/components/layout/style.scss
@@ -142,6 +142,10 @@
 	}
 }
 
+.jetpack-cloud-layout__header-breadcrumb {
+	margin-block-end: 4px;
+}
+
 .jetpack-cloud-layout__header-title {
 	font-size: 2.25rem;
 	margin-block-end: 8px;
