Fix custom theme edit button and hover behaviour (#86236)
* Make the CYS theme preview clickable

* Hide hover text con custom generated themes

--- a/client/components/theme/style.scss
+++ b/client/components/theme/style.scss
@@ -126,6 +126,7 @@ $theme-info-height: 54px;
 	transform: scale(0.28);
 	transform-origin: top left;
 	translate: 0 -10px;
+	pointer-events: none;
 }
 
 .theme__no-screenshot {
