--- a/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
@@ -5,7 +5,7 @@
 	padding: 1rem;
 }
 
-.license-lightbox__payment-plan-title {
+.license-lightbox__jetpack-manage-license-title {
 	font-size: 1rem;
 	margin-block-end: 8px;
 }
@@ -26,4 +26,47 @@
 	&.is-primary .license-lightbox__cta-button-external-link {
 		color: var(--studio-white);
 	}
+}
+
+.license-lightbox__separator {
+	font-size: 1rem;
+	font-weight: 600;
+	display: flex;
+	align-items: center;
+
+	&::before,
+	&::after {
+		flex: 1;
+		content: "";
+		padding: 0.5px;
+		background: var(--studio-gray-5);
+		margin: 2rem 15px;
+	}
+}
+
+.review-licenses__notice,
+.license-lightbox__secondary-checkout-notice {
+	color: var(--studio-gray-50);
+	font-size: rem(12px);
+	margin-block-end: 16px;
+	padding-top: 1rem;
+
+	a {
+		text-decoration: underline;
+		color: var(--studio-black);
+	}
+}
+
+.license-lightbox__secondary-content-button {
+	border: 2px solid var(--color-accent);
+	font-weight: 700;
+	font-size: 1rem;
+	margin-block-start: 1rem;
+	margin-block-end: 0;
+	width: 100%;
+	padding: 10px 16px;
+}
+
+.license-lightbox__secondary-checkout-heading {
+	font-weight: 700;
 }
