Marketplace Reviews: Show a Thank You section after updating a review (#86255)
* Separate the CreateReviewItem component in its own file

* Show Thank You section after an update

* Apply style to the editor textarea

* Reset Thank You section when closing the modal

--- a/client/my-sites/marketplace/components/review-item/style.scss
+++ b/client/my-sites/marketplace/components/review-item/style.scss
@@ -92,13 +92,14 @@ $border-color: #eee;
 		}
 	}
 
-	.marketplace-review-item__editor {
+	.marketplace-review-item__editor textarea {
 		color: var(--studio-gray-100);
 		background-color: var(--studio-gray-0);
 		border-radius: 4px;
 		font-size: $font-body-small;
 		margin-top: 16px;
 		padding: 16px;
+		border: 0;
 
 		p {
 			margin-bottom: 0;
