Implement new card design for added payment methods

--- a/client/jetpack-cloud/sections/partner-portal/payment-methods-v2/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/payment-methods-v2/style.scss
@@ -62,3 +62,10 @@
 		}
 	}
 }
+
+.payment-method-list-v2__stored-cards {
+	margin-block-start: 50px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 24px;
+}
