--- a/client/my-sites/theme/style.scss
+++ b/client/my-sites/theme/style.scss
@@ -222,6 +222,14 @@ $button-border: 4px;
 		line-height: 1;
 	}
 
+	.theme__sheet-main-info-type {
+		margin-left: 8px;
+
+		&.is-soft-launched {
+			flex-basis: unset;
+		}
+	}
+
 	.theme__sheet-main-info-tag {
 		color: var(--color-neutral-60);
 		font-size: $font-body;
