Purchase Modal: enable foldable ToS for more sections (#86215)
* Purchase Modal: enabled foldable ToS for more sections

* Remove enabled sections allowlist

--- a/client/my-sites/checkout/purchase-modal/style.scss
+++ b/client/my-sites/checkout/purchase-modal/style.scss
@@ -38,7 +38,10 @@ $left-margin: 36px;
 }
 
 .purchase-modal__wrapper {
-	display: flex;
+	display: block;
+	.has-feature-list & {
+		display: flex;
+	}
 	width: 100%;
 	flex-direction: column;
 	gap: 12px;
