--- a/client/my-sites/pages/blog-posts-page/style.scss
+++ b/client/my-sites/pages/blog-posts-page/style.scss
@@ -1,24 +1,3 @@
-.blog-posts-page {
-	display: flex;
-	align-items: center;
-	padding: 16px;
-
-	@include breakpoint-deprecated( ">480px" ) {
-		padding: 16px 24px;
-	}
-}
-
-.blog-posts-page__front-page-icon,
-.blog-posts-page__not-used-icon {
-	margin-top: -1px;
-	margin-right: 6px;
-	vertical-align: middle;
-}
-
-.blog-posts-page__details {
-	flex: 1 1 auto;
-}
-
 .blog-posts-page__info {
 	&.is-expanded .foldable-card__header {
 		min-height: 0;
@@ -29,14 +8,12 @@
 		font-size: $font-body-extra-small;
 		padding: 16px 24px;
 		min-height: 0;
+	}
 
-		&.is-disabled {
-			color: var(--color-neutral-20);
-		}
-
-		.blog-posts-page__info-icon {
-			margin: 0 4px -4px 0;
-		}
+	.blog-posts-page__front-page-icon {
+		margin-top: -1px;
+		margin-right: 6px;
+		vertical-align: middle;
 	}
 
 	.blog-posts-page__change-option {
@@ -44,19 +21,16 @@
 	}
 
 	.blog-posts-page__explanation {
-		color: var(--color-text-subtle);
-		font-size: $font-body-small;
-		margin: 6px 0 0;
+		font-style: normal;
 	}
 
 	.blog-posts-page__actions {
 		display: flex;
 		justify-content: flex-end;
+	}
 
-		a {
-			font-size: $font-body-small;
-			margin: auto;
-			margin-right: 14px;
-		}
+	.blog-posts-page__link {
+		font-size: $font-body-small;
+		margin: auto 14px;
 	}
 }
