--- a/client/jetpack-cloud/sections/partner-portal/stored-credit-card-v2/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/stored-credit-card-v2/style.scss
@@ -3,7 +3,9 @@
 
 .stored-credit-card-v2__card {
 	position: relative;
-	width: 305px;
+}
+
+.stored-credit-card-v2__card-content {
 	padding-inline: 24px;
 	height: 220px;
 	border-radius: 18px; /* stylelint-disable-line scales/radii */
@@ -22,14 +24,14 @@
 }
 
 .stored-credit-card-v2__card-number {
-	margin-block-start: 90px;
+	padding-block-start: 90px;
 	font-size: rem(24px);
 	font-weight: 700;
 	line-height: 1.5;
 
 	@include break-mobile {
 		font-size: rem(35px);
-		margin-block-start: 65px;
+		padding-block-start: 65px;
 	}
 }
 
@@ -90,3 +92,49 @@
 	}
 }
 
+.stored-credit-card-v2__card-footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-block-start: 16px;
+}
+
+.stored-credit-card-v2__card-footer-title {
+	font-size: rem(16px);
+	font-weight: 500;
+}
+
+.stored-credit-card-v2__card-footer-subtitle {
+	font-size: rem(12px);
+	font-weight: 400;
+}
+
+button.button.stored-credit-card-v2__card-footer-actions {
+	padding: 16px;
+}
+
+.stored-credit-card-v2__card-footer-actions-popover {
+	.popover__menu-item {
+		padding-block: 12px;
+
+		&:hover,
+		&:focus {
+			background: var(--color-sidebar-menu-hover-background);
+			color: var(--color-text);
+			fill: var(--color-text);
+
+			.gridicon {
+				fill: var(--color-text);
+			}
+		}
+	}
+
+
+	.popover__menu-item.stored-credit-card-v2__card-footer-actions-delete {
+		&,
+		&:hover,
+		&:focus {
+			color: var(--studio-red-50);
+		}
+	}
+}
