Added a second CTA at the hosting banner for the trial plan

--- a/client/my-sites/hosting/hosting-upsell-nudge/style.scss
+++ b/client/my-sites/hosting/hosting-upsell-nudge/style.scss
@@ -38,6 +38,15 @@
 			flex-direction: row;
 			align-items: center;
 		}
+
+		.button:not(:first-child) {
+			margin-top: 15px;
+
+			@include break-mobile {
+				margin-left: 12px;
+				margin-top: 0;
+			}
+		}
 	}
 
 	ul {
