Reuse class name

--- a/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
@@ -44,8 +44,7 @@
 	}
 }
 
-.review-licenses__notice,
-.license-lightbox__secondary-checkout-notice {
+.review-licenses__notice {
 	color: var(--studio-gray-50);
 	font-size: rem(12px);
 	margin-block-end: 16px;
