Expose Hosting Trial: Created a warning for not eligible trial users (#86249)
* Created a worning for not eligible trial users

* Updated Notice by reusing the global one

* Forwarding received URL parameters

* Added test to ensure we'll redrect not eligible users

* Added test to ensure we're showing the warning message at the plans page

* Removed redirect and simplified warning logic

* Updated message to be less intrusive

* Improved message size

* Tests updated

* Removed state from plans-grid and used planIntent to check whether to render it or not

* Test updated

* Removed unnecessary intent parameter

* Decoupled plan CTA text from plans-grid context

* Test updated

* Moved busy and postBuyttonText logic to SignupFlowPlanFeatureActionButton

--- a/client/my-sites/plans-grid/style.scss
+++ b/client/my-sites/plans-grid/style.scss
@@ -242,6 +242,12 @@ $mobile-card-max-width: 440px;
 		font-weight: 600;
 	}
 
+	.plan-features-2023-grid__actions-post-button-text {
+		text-align: center;
+		font-size: 0.75rem;
+		display: block;
+		margin-top: 10px;
+	}
 
 	&.is-top-buttons {
 		padding: 0 20px;
