JP Manage: 237 - Upsell polish tasks (#86498)
* Add discountedPriceTotal (and rearrange code slightly)

* Adjust logic when there is no discounted price

* Sentence case

* Add specificity

* Consistent heading font color, size, and weight

* Consistent margins

* Adjust main CTA font size

--- a/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/license-lightbox/style.scss
@@ -6,7 +6,9 @@
 }
 
 .license-lightbox__jetpack-manage-license-title {
+	color: var(--studio-black);
 	font-size: 1rem;
+	font-weight: 700;
 	margin-block-end: 8px;
 }
 
@@ -16,6 +18,7 @@
 	display: block;
 	width: 100%;
 	padding: 10px 16px;
+	font-size: 1rem;
 
 	.license-lightbox__cta-button-external-link {
 		inset-inline-start: 4px;
