Implement modal support to the add payment method component

--- a/client/jetpack-cloud/sections/partner-portal/primary/payment-method-add-v2/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/primary/payment-method-add-v2/style.scss
@@ -24,6 +24,10 @@
 	@include break-xlarge {
 		flex-direction: row;
 	}
+
+	&.payment-method-add__content--modal {
+		padding-block: 0;
+	}
 }
 
 .payment-method-add__card.aside {
