Plans 2024: Plans Grid Next package

--- a/client/jetpack-app/plans/style.scss
+++ b/client/jetpack-app/plans/style.scss
@@ -1,4 +1,4 @@
-@import "calypso/my-sites/plans-grid/media-queries";
+@import "@automattic/plans-grid-next/src/media-queries";
 @import "@wordpress/base-styles/variables";
 @import "@automattic/typography/styles/fonts";
 
