--- a/packages/plans-grid-next/src/_media-queries.scss
+++ b/packages/plans-grid-next/src/_media-queries.scss
@@ -229,7 +229,7 @@ $planComparisonMinWidthToGridWidthWithSidebarMap: (
 }
 
 /**
- * @see client/my-sites/plans-grid/components/plan-type-selector/style.scss
+ * @see @automattic/plans-grid-next/src/components/plan-type-selector/style.scss
  * This introduces mobile only sticky behavior for the plan type selector.
  *
  */
