--- a/client/signup/steps/plans/style.scss
+++ b/client/signup/steps/plans/style.scss
@@ -1,4 +1,4 @@
-@import "calypso/my-sites/plans-grid/media-queries";
+@import "@automattic/plans-grid-next/src/media-queries";
 
 .is-section-stepper .plans-features-main__group.is-2023-pricing-grid,
 .is-section-signup .is-2023-pricing-grid .plan-features-2023-grid__content {
